--- a/app/src/main/res/layout/activity_travel.xml
+++ b/app/src/main/res/layout/activity_travel.xml
@@ -1,33 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relative1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <include
+        android:id="@+id/incToolbar"
+        layout="@layout/toolbar" />
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnfinishTravel"
+        android:layout_below="@id/incToolbar">
 
         <LinearLayout
             android:id="@+id/linearInner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
-
-            <TextView
-                android:id="@+id/velocimeter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.13"
-                android:text="DATOS DE VELOCIMETRO:"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -40,93 +32,120 @@
                     android:id="@+id/speedTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
                     android:text="0"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="85sp" />
+                    android:textSize="80sp" />
 
                 <TextView
                     android:id="@+id/kmhTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/kmh"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text="@string/kmh" />
             </LinearLayout>
 
             <fragment
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="180dp"
+                android:layout_marginBottom="16dp"
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp" />
 
-            <TextView
-                android:id="@+id/longitudeTextView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:text="@string/longitude"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/longitudeValue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknownLongLat"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                <TextView
+                    android:id="@+id/longitudeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/longitude" />
 
-            <TextView
-                android:id="@+id/latitudeTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/latitude"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                <TextView
+                    android:id="@+id/longitudeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/unknownLongLat" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/latitudeValue"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/unknownLongLat"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/latitudeTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/latitude" />
+
+                <TextView
+                    android:id="@+id/latitudeValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/unknownLongLat" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/accelerometer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:layout_marginTop="16dp"
                 android:text="DATOS DE ACELEROMETRO:"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <TextView
-                android:id="@+id/textX"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:layout_marginLeft="48dp"
+                android:layout_marginRight="48dp"
+                android:orientation="horizontal"
+                android:weightSum="3">
 
-            <TextView
-                android:id="@+id/textY"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                <TextView
+                    android:id="@+id/textX"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <TextView
-                android:id="@+id/textZ"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                <TextView
+                    android:id="@+id/textY"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
 
+                <TextView
+                    android:id="@+id/textZ"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
+            </LinearLayout>
         </LinearLayout>
+
     </ScrollView>
 
     <Button
-        android:id="@+id/toggleButton"
+        android:id="@+id/btnfinishTravel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/finish_travel" />
+        android:layout_alignParentBottom="true"
+        android:layout_margin="32dp"
+        android:background="#dc4a38"
+        android:text="@string/finish_travel"
+        android:textColor="@color/white" />
 
-</LinearLayout>
+</RelativeLayout>
