--- a/app/src/main/res/layout/activity_init_travel.xml
+++ b/app/src/main/res/layout/activity_init_travel.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
-    android:orientation="vertical"
-    android:weightSum="1">
+    android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,25 +29,31 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_centerVertical="true"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:gravity="bottom"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/groupbuttons">
 
         <Button
             android:id="@+id/btnInitTravel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="48dp"
-            android:layout_marginEnd="96dp"
-            android:layout_marginStart="96dp"
-            android:layout_marginTop="64dp"
+            android:layout_margin="15dp"
             android:background="#dc4a38"
             android:elevation="5dp"
             android:text="@string/init_travel"
-            android:textColor="@color/white"
-            android:singleLine="true" />
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btnLogoutUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="#dc4a38"
+            android:elevation="5dp"
+            android:text="@string/logout_user"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
