--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray"
@@ -9,15 +10,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.6">
+        android:layout_weight="0.6"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/appname"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginRight="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="40dp"
+            android:text="@string/app_name" />
 
         <ImageView
             android:id="@+id/imgLogo"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/appname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="92dp"
             android:scaleType="centerInside"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/controlcar" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -37,10 +52,9 @@
             android:background="#dc4a38"
             android:elevation="5dp"
             android:ellipsize="middle"
-            android:lines="1"
-            android:maxLines="1"
             android:text="@string/sign_in_with_google"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:singleLine="true" />
 
         <TextView
             android:id="@+id/txtAccept"
