--- a/app/src/main/res/layout/activity_travel.xml
+++ b/app/src/main/res/layout/activity_travel.xml
@@ -21,6 +21,7 @@
             android:layout_height="match_parent"
             android:layout_below="@id/incToolbar"
             android:orientation="vertical"
+            android:gravity="center"
             android:paddingBottom="32dp"
             android:paddingLeft="32dp"
             android:paddingRight="32dp"
@@ -28,17 +29,17 @@
 
             <unal.edu.co.controlcar.View.Speedometer
                 android:id="@+id/Speedometer"
-                android:layout_width="match_parent"
+                android:layout_width="239dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:background="#000000"
+                android:background="#ffffff"
                 custom:currentSpeed="0"
                 custom:maxSpeed="120"
                 custom:offColor="#444444" />
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="320dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -48,8 +49,9 @@
                     <fragment
                         android:id="@+id/map"
                         android:name="com.google.android.gms.maps.SupportMapFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="180dp"
+                        android:layout_width="270dp"
+                        android:layout_height="145dp"
+                        android:layout_gravity="center"
                         android:layout_marginBottom="16dp" />
 
                     <LinearLayout
